switching to docker hosted elasticsearch and kibana 7.9.1